Fix safari horizontal scroll

--- a/src/components/Calendar/index.scss
+++ b/src/components/Calendar/index.scss
@@ -95,6 +95,7 @@
 
 .rdrInfiniteMonths{
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .rdrArrowsWrapper {
